--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "openzeppelin-solidity": "^2.3.0",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
+    "react-color": "^2.17.3",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
