--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Art Token",
-  "name": "Art Token - ERC721 token",
+  "short_name": "Marble Token",
+  "name": "Marble Token - ERC721 token",
   "icons": [
     {
       "src": "favicon.ico",
